--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,15 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>modern-api</name>
 	<description>RESTful web application</description>
+
+	<scm>
+		<developerConnection>scm:git:https://github.com/dev-future-tech/modern-api.git</developerConnection>
+	</scm>
+
 	<properties>
 		<java.version>23</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
