--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>modern-api</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>modern-api</name>
 	<description>RESTful web application</description>
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/dev-future-tech/modern-api.git</developerConnection>
-	  <tag>modern-api-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<properties>
