--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 management.endpoint.health.probes.enabled=true
+
+spring.datasource.username=modern_user
+spring.datasource.password=letmein
+spring.datasource.url=jdbc:postgresql://127.0.0.1:15432/modern_db
