--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,7 +13,8 @@ spec:
     spec:
       containers:
       - name: modern-api
-        image: anthonyikeda/modern-api:0.0.4-SNAPSHOT
+        image: anthonyikeda/modern-api:0.0.5
+        imagePullPolicy: IfNotPresent
         env:
           - name: SPRING_DATASOURCE_URL
             value: jdbc:postgresql://my-release-postgresql.default:5432/modern_dbs
