--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
                 <configuration>
                     <from>
                         <image>eclipse-temurin:23.0.2_7-jre</image>
+                        <platforms>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
                     </from>
                     <to>
                         <image>anthonyikeda/modern-api</image>
